--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,7 @@
 - task: PowerShell@2
   inputs:
-    filePath: 'https://github.com/sathya-cloud/Azure-Devops/blob/master/Devops_01.ps1'
+    targetType: 'inline'
+    script: |
+      # Write your PowerShell commands here.
+      
+      Write-Host "Hello World"
